--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Video gallery</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="csss.css">
   </head>
   <body>
+    <div class="slider">
+      <!-- fade css -->
+      <div class="myslide fade">
+        <iframe style="width: 100%; height: 100%;" src="https://www.youtube.com/embed/COz8m0ZtSjc"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          style="width: 100%; height: 100%;" allowfullscreen></iframe>
+      </div>
+  
+      <div class="myslide fade">
+  
+        <iframe style="width: 100%; height: 100%;" src="https://www.youtube.com/embed/XYlYLehTanA"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+  
+      </div>
+  
+      <div class="myslide fade">
+  
+        <iframe style="width: 100%; height: 100%;" src="https://www.youtube.com/embed/aSyWbo8p7po"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+  
+      </div>
+  
+      <div class="myslide fade">
+  
+        <iframe style="width: 100%; height: 100%;" src="https://www.youtube.com/embed/Od9lBeTI5ic"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+  
+      </div>
+  
+      <div class="myslide fade">
+  
+        <iframe style="width: 100%; height: 100%;" src="https://www.youtube.com/embed/IBkJele_oDA"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+  
+      </div>
+  
+      <!-- onclick js -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+  
+    
     <div class="full">
     <div class="grid">
       <div class="grid-item">
@@ -99,5 +151,7 @@ Helping underprivileged village towards Education | Simple Trust</p>          </
       </div>
     </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
