first video replaced

--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
   <div class="slider">
     <!-- fade css -->
     <div class="myslide fade">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/COz8m0ZtSjc" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+      <iframe width="350" height="250" src="https://www.youtube.com/embed/MNDbCsDmrLU"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
     </div>
 
     <div class="myslide fade">
@@ -177,10 +178,9 @@
 
     <!-- 4th video of slider -->
     <div class="myslide fade">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/RBxjs1joUN4" 
-      title="YouTube video player" frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/RBxjs1joUN4" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     </div>
 
     <!-- 5th video of slider-->
