twitter link changed

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <a href="https://www.facebook.com/SimpleTrustTN" target="_blank">
                 <i class="fa fa-facebook"></i>
               </a>
-              <a href="https://twitter.com/simpletrust1" target="_blank">
+              <a href="https://twitter.com/simpletrusttn?t=fiAXlIvIaIfFXp8doHsNnQ&s=09" target="_blank">
                 <i class="fa fa-twitter"></i>
               </a>
               <a href="https://www.instagram.com/simpletrusttn/" target="_blank">
