--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
                   <li>
                     <i class="fa fa-map-marker"></i
                     ><span
-                      >No.3, Amudham Nagar Extention, Peerkaranai, new
-                      Perungalathur, Chennai - 600063.</span
+                      >A17, Ruby Nakshatra, 6th Cross Street, Krishna Nagar,
+                      West Tambaram, Chennai - 600045</span
                     >
                   </li>
                 </ul>
