--- a/index.html
+++ b/index.html
@@ -5,26 +5,6 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
     <title>Video gallery</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Roboto+Condensed:400,300,700"
-      rel="stylesheet"
-    />
-
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 
     <!-- FontAwesome CSS -->
@@ -41,14 +21,17 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
-
+    
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="csss.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Roboto+Condensed:400,300,700"
+      rel="stylesheet"
+    />
     <style>
       p {
         text-align: center;
       }
-
       .column {
         float: left;
         width: 33.3%;
@@ -302,7 +285,7 @@
             </div>
             <div class="card-content">
               <p class="card-text">
-                இருளர்கள் வாழ்வில் ஒளியேற்றும்.. இளைஞர் கூட்டம்.!
+                "இருளர்கள் வாழ்வில் ஒளியேற்றும்.. இளைஞர் கூட்டம்.!
               </p>
             </div>
           </div>
@@ -424,8 +407,8 @@
             </div>
             <div class="card-content">
               <p class="card-text">
-                அப்துல் கலாம் மாணவர்களுக்கு கூறிய அறிவுரை | Kalaam advises to
-                students
+                "இருளர்கள் வாழ்வில் ஒளியேற்றும்.. இளைஞர் கூட்டம்.! Simple Trust
+                | Irular
               </p>
             </div>
           </div>
@@ -445,8 +428,8 @@
             </div>
             <div class="card-content">
               <p class="card-text">
-                இருளர்கள் வாழ்வில் ஒளியேற்றும்.. இளைஞர் கூட்டம்.! Simple Trust |
-                Irular
+                அப்துல் கலாம் மாணவர்களுக்கு கூறிய அறிவுரை | Kalaam advises to
+                students
               </p>
             </div>
           </div>
@@ -577,4 +560,5 @@
 
     <script src="script.js"></script>
   </body>
+  
 </html>
