--- a/index.html
+++ b/index.html
@@ -534,6 +534,28 @@
                     >
                   </li>
                 </ul>
+              </ul>
+              <ul class="d-flex flex-wrap align-items-center">
+                  <!-- <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li> -->
+                  <li>
+                      <a href="https://www.facebook.com/SimpleTrustTN" target="_blank">
+                          <i class="fa fa-facebook"></i>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="https://twitter.com/simpletrust1" target="_blank">
+                          <i class="fa fa-twitter"></i>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="https://www.instagram.com/simpletrusttn/" target="_blank">
+                          <i class="fa fa-instagram"></i>
+                      </a>
+                  </li>
+                  <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+                  <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
+                  <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+              </ul>
               </div>
               <!-- .foot-contact -->
             </div>
