Footer mail changes

--- a/index.html
+++ b/index.html
@@ -419,10 +419,7 @@
               <h2>Contact</h2>
 
                 <ul>
-                  <li>
-                    <i class="fa fa-envelope"></i
-                    ><span>Contact@simpletrust.org</span>
-                  </li>
+                  <li><a href="mailto:contact@simpletrust.org" title="mail"><i class="fa fa-envelope"></i><span>Contact@simpletrust.org</span></a></li>
                   <li>
                     <i class="fa fa-map-marker"></i
                     ><span
