--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 >
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
-                  <li><a href="causes.html">Causes</a></li>
+<!--                   <li><a href="causes.html">Causes</a></li> -->
                   <li class="current-menu-item">
                     <a href="portfolio.html">Gallery</a>
                   </li>
@@ -459,7 +459,7 @@
                     >Donate</a
                   >
                 </li>
-                <li><a href="causes.html">Causes</a></li>
+<!--                 <li><a href="causes.html">Causes</a></li> -->
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li>
                   <a href="https://chat.whatsapp.com/CRVVADmeCRUCEiDnYs4EhX"
