--- a/index.html
+++ b/index.html
@@ -531,7 +531,9 @@
       <div class="footer-bar">
         <div class="container">
           <div class="row last">
-            <h6 align="center">Design & Developed by Softrate</h6>
+            <a href="https://softrateindia.com/">
+              <h6 align="center">Design & Developed by Softrate <img width="40" src="images/soft.png"></h6>
+            </a>
           </div>
           <!-- .row -->
         </div>
