footer bar changed

--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@
       <div class="footer-bar">
         <div class="container">
           <div class="row last">
-            <a href="https://softrateindia.com/">
-              <h6 align="center">Design & Developed by Softrate <img width="40" src="images/soft.png"></h6>
-            </a>
+            <a href="https://softrateindia.com/" style="align-items:center;">
+              <h6> Design & Developed by Softrate <img width="35" height="25" src="images/soft.png"></h6>
+              </a>
           </div>
           <!-- .row -->
         </div>
