logo pos change in footer bar

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                   <li>
                     <a href="mailto:contact@simpletrust.org" title="mail"
                       ><i class="fa fa-envelope"></i
-                      ><span>Contact@simpletrust.org</span></a
+                      ><span>contact@simpletrust.org</span></a
                     >
                   </li>
                   <li>
@@ -531,8 +531,9 @@
       <div class="footer-bar">
         <div class="container">
           <div class="row last">
+            <img width="35" height="25" src="images/soft.png">
             <a href="https://softrateindia.com/" style="align-items:center;">
-              <h6> Design & Developed by Softrate <img width="35" height="25" src="images/soft.png"></h6>
+              <h6> Design & Developed by Softrate</h6>
               </a>
           </div>
           <!-- .row -->
